--- a/app/scss/components/_title.scss
+++ b/app/scss/components/_title.scss
@@ -7,6 +7,38 @@
   line-height: 0.95;
   font-family: $pragmatica;
   text-align: center;
+  @media (max-width: 1300px) {
+    font-size: 52px;
+  }
+  @media (max-width: 1100px) {
+    font-size: 48px;
+  }
+  @include r($lg) {
+    font-size: 46px;
+    max-width: 760px;
+  }
+  @media (max-width: 910px) {
+    font-size: 44px;
+  }
+  @include r($tablet) {
+    font-size: 40px;
+    max-width: 640px;
+    line-height: 1;
+  }
+  @include r($sm) {
+    font-size: 36px;
+    max-width: 480px;
+  }
+  @media (max-width: 560px) {
+    font-size: 34px;
+    max-width: 460px;
+  }
+  @include r($phone) {
+    font-size: 30px;
+  }
+  @media (max-width: 410px) {
+    font-size: 28px;
+  }
 
   &-section {
     font-size: 40px;
