--- a/app/scss/home/_advantages.scss
+++ b/app/scss/home/_advantages.scss
@@ -1,4 +1,18 @@
 .advantages {
+  margin-top: 110px;
+  @include r($desktop) {
+    margin-top: 90px;
+  }
+  @media (max-width: 1100px) {
+    margin-top: 80px;
+  }
+  @include r($lg) {
+    margin-top: 50px;
+  }
+  @include r($tablet) {
+    margin-top: 40px;
+  }
+
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
