--- a/app/scss/home/_home.scss
+++ b/app/scss/home/_home.scss
@@ -2,7 +2,13 @@
   margin: 16px 16px 0;
   padding: 48px 0;
   border-radius: 16px;
-  background-color: #F5F3ED;
+  background-color: $white10;
+  @include r($sm) {
+    padding: 36px 0;
+  }
+  @media (max-width: 520px) {
+    padding: 30px 0;
+  }
 
   &__title {
     margin: 0 auto;
@@ -12,6 +18,23 @@
     margin: -1px -72px 115px auto;
     display: flex;
     justify-content: center;
+    @media (max-width: 1300px) {
+      margin-top: 10px;
+    }
+    @include r($tablet) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      max-width: 520px;
+      margin: 10px auto 90px;
+    }
+    @media (max-width: 560px) {
+      grid-template-columns: repeat(1, 1fr);
+      margin: 17px auto 70px;
+    }
+    @media (max-width: 520px) {
+      margin-bottom: 56px;
+    }
+
   }
 
   &__item {
@@ -25,6 +48,14 @@
     backdrop-filter: blur(2px);
     align-self: flex-start;
     position: relative;
+    @include r($tablet) {
+      max-width: 240px;
+      transform: translateX(14px);
+    }
+    @media (max-width: 560px) {
+      margin: 0 auto;
+      transform: translateX(0) rotate(3deg);
+    }
 
     &--middle {
       gap: 18px;
@@ -32,6 +63,13 @@
       max-width: 250px;
       transform: rotate(-11.674deg) translateX(-34px) translateY(-10px);
       z-index: 30;
+      @include r($tablet) {
+        transform: rotate(-7deg) translateX(-6px);
+        z-index: 60;
+      }
+      @media (max-width: 560px) {
+        transform: rotate(-8deg) translateY(-9px) translateX(-6px);
+      }
 
       .home__subtitle {
         font-size: 18.6px;
@@ -45,10 +83,35 @@
       max-width: 303px;
       transform: rotate(0.035deg) translateX(-70px) translateY(5px);
       z-index: 50;
+      @include r($lg) {
+        padding: 20px;
+      }
+      @media (max-width: 860px) {
+        padding: 18.6px;
+        max-width: 290px;
+      }
+      @include r($tablet) {
+        transform: translateY(-8px) translateX(-50%) rotate(11deg);
+        position: relative;
+        left: 91%;
+      }
+      @media (max-width: 560px) {
+        left: 0;
+        transform: translateY(-2px) rotate(4deg);
+      }
 
       .home__subtitle {
         font-size: 22.6px;
         letter-spacing: -0.453px;
+        @include r($lg) {
+          font-size: 21px;
+        }
+        @media (max-width: 860px) {
+          font-size: 20px;
+        }
+        @include r($sm) {
+          font-size: 18px;
+        }
       }
     }
   }
