--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer indent">
+<section class="footer indent" id="footer">
   <div class="container">
     <img class="footer__img" src="images/follow.svg" width="261" height="273" alt="follow us decor">
     <h2 class="footer__title title title-section--big">Follow us on Twitter</h2>
@@ -13,4 +13,4 @@
     </div>
   </div>
   <p class="footer__author">© InnovateX. All rights reserved</p>
-</footer>
+</section>
