--- a/app/html/components/_nav.html
+++ b/app/html/components/_nav.html
@@ -1,16 +1,19 @@
 <nav class="nav">
   <ul class="nav__list">
     <li>
-      <a class="nav__link active" href="">Home</a>
+      <a class="nav__link active" href="#home">Home</a>
     </li>
     <li>
-      <a class="nav__link" href="">We believe</a>
+      <a class="nav__link" href="#advantages">Advantages</a>
     </li>
     <li>
-      <a class="nav__link" href="">Consultation</a>
+      <a class="nav__link" href="#reviews">Reviews</a>
     </li>
     <li>
-      <a class="nav__link" href="">Features</a>
+      <a class="nav__link" href="#connected">Connected</a>
+    </li>
+    <li>
+      <a class="nav__link" href="#footer">Follow us</a>
     </li>
   </ul>
   <span class="nav__dot"></span>
