--- a/app/scss/home/_advantages.scss
+++ b/app/scss/home/_advantages.scss
@@ -32,6 +32,7 @@
     padding: 24px;
     border: 1px solid $white10;
     min-height: 400px;
+    overflow: hidden;
     @media (max-width: 1100px) {
       min-height: 376px;
     }
