--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -7,8 +7,8 @@
         For read the latest news, tips, and insights on new technologies, professional skills, and personal development.
       </p>
       <div class="info__actions">
-        <button class="btn" type="button">Subscribe</button>
-        <button class="btn btn--light-green" type="button">Reviews</button>
+        <a class="btn" href="https://x.com/InnovateXUS" target="_blank">Subscribe</a>
+        <a class="btn btn--light-green" href="#reviews">Reviews</a>
       </div>
     </div>
   </div>
