--- a/app/scss/home/_reviews.scss
+++ b/app/scss/home/_reviews.scss
@@ -73,6 +73,9 @@
       @media (max-width: 920px) {
         max-width: 100%;
       }
+      @include r($tablet) {
+
+      }
     }
 
     &.last {
@@ -83,14 +86,15 @@
   }
 
   &__cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: flex-start;
-    display: flex;
     gap: 16px;
     @include r($tablet) {
       gap: 12px;
     }
     @include r($tablet) {
-      flex-direction: column;
+      grid-column: span 2;
     }
     @include r($sm) {
       display: none;
@@ -141,6 +145,9 @@
       @media (max-width: 920px) {
         min-height: 290px;
       }
+      @include r($tablet) {
+        grid-column: span 2;
+      }
     }
 
     &.four {
@@ -164,7 +171,7 @@
     }
 
     &.six {
-      min-height: 410px;
+      min-height: 390px;
       @include r($desktop) {
         min-height: 375px;
       }
