--- a/app/html/components/_nav.html
+++ b/app/html/components/_nav.html
@@ -1,4 +1,8 @@
 <nav class="nav">
+  <button class="menu-btn menu-btn--header">
+    <span class="menu-btn__line"></span>
+    <span class="sr-only">Interact with the menu</span>
+  </button>
   <ul class="nav__list">
     <li>
       <a class="nav__link active" href="#home">Home</a>
@@ -18,4 +22,24 @@
   </ul>
   <span class="nav__dot"></span>
   <img class="nav__logo" src="images/icons/logo.svg" width="104" height="18" alt="logo">
+</nav>
+
+<nav class="nav__mobile">
+  <ul class="nav__list mobile">
+    <li>
+      <a class="nav__link active" href="#home">Home</a>
+    </li>
+    <li>
+      <a class="nav__link" href="#advantages">Advantages</a>
+    </li>
+    <li>
+      <a class="nav__link" href="#reviews">Reviews</a>
+    </li>
+    <li>
+      <a class="nav__link" href="#connected">Connected</a>
+    </li>
+    <li>
+      <a class="nav__link" href="#footer">Follow us</a>
+    </li>
+  </ul>
 </nav>
